# tastytrader

./: .gitignore  design.md  pyproject.toml
.claude/skills/to-issues/: SKILL.md
.orchestrator/: phase1-tests-report.md
config/: .env.example  settings.toml
dashboard/: app.py  state.py  streamer.py
dashboard/api/: __init__.py
dashboard/static/css/: components.css  layout.css  tokens.css
dashboard/static/js/: chart.js  dashboard.js  main.js  order-form.js
dashboard/templates/: index.html
docs/superpowers/plans/: 2026-05-22-tastytrader.md  2026-06-04-issue-7-ohlc-chart.md  plan-issue-6-holding-detail-panel.md
docs/superpowers/specs/: 2026-05-22-tastytrader-design.md
scripts/: test_equity_buy.py
src/: auth.py  config.py  executor.py  main.py  models.py  strategy.py  streamer.py
tests/: test_auth.py  test_dashboard.py  test_executor.py  test_strategy.py  test_streamer.py
tests/dashboard/: conftest.py  test_app.py
